发送消息时打上log，方便查看发送失败的原因

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -317,6 +317,8 @@
         };
         
         function sendmsg(toUserId,inputValue,handler){
+        	console.log("发送消息 - toUserId:"+toUserId+"-inputValue:"+inputValue+"-handler:"+handler);
+        	log2root("发送消息- toUserId:"+toUserId+"-inputValue:"+inputValue+"-handler:"+handler);
         	chat.sendPrivateMsg(toUserId,inputValue,handler);
         }
 		
