匹配人详情页tab效果做了一点点

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -134,6 +134,10 @@
 		<div onclick="cleartimeout()" style="position: absolute;top: 52px;left: 100px;background: #f1f1f1;">
 			选中标签测试停止
 		</div>-->
+		<!-- 进入匹配人详情页按钮-->
+		<div onclick="enterMatchUsersPage()" style="position: absolute;top: 52px;left: 100px;background: #f1f1f1;z-index:999;">
+			进入匹配人详情页按钮
+		</div>-->
 		
 	</div> <!--End of <div id="showatloaded" class="showatloaded"> -->
 	
