--- a/xunta-web/src/main/webapp/client_code/index.html
+++ b/xunta-web/src/main/webapp/client_code/index.html
@@ -257,9 +257,10 @@
 		var url= location.href.split('#').toString();
 		console.log("发送微信分享链接自定义消息给后台");
 		log2root("发送微信分享链接自定义消息给后台");
+		var link;//分享链接
 		
 		$.ajax({
-	        url : "http://www.xunta.so/xunta-web/sendShareLinksMsg",
+	        url : url+"/sendShareLinksMsg",
 	        action : "post",
 	        contentType : "application/x-www-form-urlencoded; charset=utf-8",
 	        dataType : "jsonp",
@@ -268,9 +269,10 @@
 	        data : {url:url },
 	        async : false,
 	        success : function(data, textStatus) {
+	        	link=data.url+"/wxShareLinksLogin";
 	        	wx.config({
 	                debug: false,////生产环境需要关闭debug模式
-	                appId: "wxdac88d71df6be268",//appId通过微信服务号后台查看
+	                appId: data.appid,//appId通过微信服务号后台查看
 	                timestamp: data.timestamp,//生成签名的时间戳
 	                nonceStr: data.nonceStr,//生成签名的随机字符串
 	                signature: data.signature,//签名
@@ -285,7 +287,7 @@
 	        		log2root("微信JS-SDK成功");
                 	console.log("微信JS-SDK连接成功");
 	        		
-	                var link = "http://www.xunta.so/wxShareLinksLogin";
+	                //var link = "http://www.xunta.so/wxShareLinksLogin";
 	                var imgUrl = getLacalUrl()+"/../image/xun.jpg";
 	                var protocol = window.location.protocol;
 	                var host = window.location.host;
