--- a/xunta-web/src/main/webapp/client_code/index.html
+++ b/xunta-web/src/main/webapp/client_code/index.html
@@ -255,12 +255,19 @@
 	/**2017.11.15 发送微信分享链接自定义消息给后台*/
 	function sendWeChatShareLinkMsg(){
 		var url= location.href.split('#').toString();
-		console.log("发送微信分享链接自定义消息给后台");
-		log2root("发送微信分享链接自定义消息给后台");
-		var link;//分享链接
+		console.log("发送微信分享链接自定义消息给后台 : "+url);
+		log2root("发送微信分享链接自定义消息给后台  :"+url);
+		var requestUrl,link;
+		if(url.indexOf("www.xunta.so")>=0){
+			requestUrl="http://www.xunta.so/xunta-web/sendShareLinksMsg";
+			link = "http://www.xunta.so/wxShareLinksLogin"
+		}else if(url.indexOf("www.ainiweddingcloud.com")>=0){
+			requestUrl="http://www.ainiweddingcloud.com/xunta-web/sendShareLinksMsg";
+			link = "http://www.ainiweddingcloud.com/wxShareLinksLogin"
+		}
 		
 		$.ajax({
-	        url : url+"/sendShareLinksMsg",
+	        url : requestUrl,
 	        action : "post",
 	        contentType : "application/x-www-form-urlencoded; charset=utf-8",
 	        dataType : "jsonp",
@@ -269,7 +276,9 @@
 	        data : {url:url },
 	        async : false,
 	        success : function(data, textStatus) {
-	        	link=data.url+"/wxShareLinksLogin";
+	        	/* link=data.url+"wxShareLinksLogin";
+	        	console.log("发送微信分享链接 : "+link);
+	    		log2root("发送微信分享链接  :"+link); */
 	        	wx.config({
 	                debug: false,////生产环境需要关闭debug模式
 	                appId: data.appid,//appId通过微信服务号后台查看
