--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -134,7 +134,7 @@
 		<div onclick="cleartimeout()" style="position: absolute;top: 52px;left: 100px;background: #f1f1f1;">
 			选中标签测试停止
 		</div>-->
-		<!-- 进入匹配人详情页按钮-->
+		<!-- 进入匹配人详情页按钮
 		<div onclick="enterMatchUsersPage()" style="position: absolute;top: 52px;left: 100px;background: #f1f1f1;z-index:999;">
 			进入匹配人详情页按钮
 		</div>-->
