艾妮把‘心语’改成‘关键词’

--- a/xunta-web/src/main/webapp/client_code/index.html
+++ b/xunta-web/src/main/webapp/client_code/index.html
@@ -302,7 +302,7 @@
 	                var host = window.location.host;
 	                //分享朋友圈
 	                wx.onMenuShareTimeline({
-	                    title: '寻Ta-发出"心语", 找到心灵相通的Ta',
+	                    title: '寻Ta-发出"关键词", 找到心灵相通的Ta',
 	                    link: link,
 	                    imgUrl: imgUrl,// 自定义图标
 	                    trigger: function (res) {
@@ -324,7 +324,7 @@
 	    			//分享给好友
 	              	wx.onMenuShareAppMessage({
             			title: '寻Ta', // 分享标题
-            			desc: '发出"心语", 找到心灵相通的Ta', // 分享描述
+            			desc: '发出"关键词", 找到心灵相通的Ta', // 分享描述
            				link: link,
             			imgUrl:imgUrl, // 自定义图标
             			type: 'link', // 分享类型,music、video或link，不填默认为link
