--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -122,7 +122,7 @@
 		</div>
 		
 		<!-- "进入聊天列表按钮"用fixed后,不论放在哪里,都只看屏幕的长宽.-->
-		<div class="enterdialogList" id="enterdialogList" onclick="EnterdialogList()">
+		<div class="enterdialogList" id="enterdialogList" onclick="enterMatchUsersPage()">
 			<img src="../image/new-msg-3.png" />
 		</div>
 
@@ -270,9 +270,9 @@
         				}
         			}
         		    
-        		    if(window.parent.document.getElementById("dialoglist_page")!=null ){//聊天列表打开过,实现置顶
-        		    	exec("dialoglist_page", "updateDialogContentAndTime('','"+toImgUrl+"','"+data+"','"+postTimeStr+"','"+window_id+"')");//更新聊天列表内容和时间
-            			exec("dialoglist_page", "makeDialogListTop('" + toUserName+"','"+toImgUrl+"','"+window_id +"')");
+        		    if(window.parent.document.getElementById("matchUsers_page")!=null ){//聊天列表打开过,实现置顶
+        		    	exec("matchUsers_page", "updateDialogContentAndTime('','"+toImgUrl+"','"+data+"','"+postTimeStr+"','"+window_id+"')");//更新聊天列表内容和时间
+            			exec("matchUsers_page", "makeDialogListTop('" + toUserName+"','"+toImgUrl+"','"+window_id +"')");
             		}
             	} else { 
             		myOrOther="other";
@@ -280,9 +280,9 @@
             		//showSelfPoster(user, data,imgUrl,msgId,"other",false);
             		
             		//聊天列表未读消息提示
-            		if(window.parent.document.getElementById("dialoglist_page")!=null ){//聊天列表打开过
-            			exec("dialoglist_page", "unreadMsg('"+user+"','"+imgUrl+"','"+data+"','"+postTimeStr+"','"+respondeUserId+"','"+1+"')");
-            			exec("dialoglist_page", "makeDialogListTop('"+user+"','"+imgUrl+"','"+respondeUserId+"')");
+            		if(window.parent.document.getElementById("matchUsers_page")!=null ){//聊天列表打开过
+            			exec("matchUsers_page", "unreadMsg('"+user+"','"+imgUrl+"','"+data+"','"+postTimeStr+"','"+respondeUserId+"','"+1+"')");
+            			exec("matchUsers_page", "makeDialogListTop('"+user+"','"+imgUrl+"','"+respondeUserId+"')");
             		}else{//聊天页表没有打开才将未读信息保存好
             			//2017.08.16   装所有的未读信息，为了将数组传给聊天列表
                 		var unreadNum=1;
