--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.html
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.html
@@ -35,7 +35,7 @@
             	<div class="tabList">
             		<div class="showMatchUsers" id="showMatchUsers">
 						<!--  2017.08.15  叶夷   一个匹配人 -->
-						<!-- <div class="matchUser" id="matchUser">
+						<div class="matchUser" id="matchUser">
 							<div class="userimg">
 								<img id="user_img" src="http://www.mxunta.so:80/xunta-web/useravatar/thumb_img_804622010041896960/jpg/image" >
 								<div class="username" id="username">叶汉良</div>
@@ -55,10 +55,25 @@
 								<div class="userTag">核武器</div>
 								<div class="userTag">核武器</div>
 							</div>
+							<div class="userTags">
+								<div class="userTag">核武器</div>
+								<div class="userTag">核武器</div>
+								<div class="userTag">核武器</div>
+								<div class="userTag">核武器</div>
+								<div class="userTag">核武器</div>
+								<div class="userTag">核武器</div>
+								<div class="userTag">核武器</div>
+								<div class="userTag">核武器</div>
+								<div class="userTag">核武器</div>
+								<div class="userTag">核武器</div>
+								<div class="userTag">核武器</div>
+								<div class="userTag">核武器</div>
+								<div class="userTag">核武器</div>
+							</div>
 							<div class="sendMsg">
 								发消息
 							</div>
-						</div> -->
+						</div>
 					</div>
             	</div>
             	
@@ -119,8 +134,8 @@
     <!-- 这是聊天列表的js信息 -->
     <script type="text/javascript" src="dialoglist_page_common_web.js"></script>
     <script type="text/javascript" src="dialoglist_page_common.js"></script>
-    <!-- 这是为了移动端web的调试 -->
-	<script src="../script/debuggap.js" type="text/javascript"></script>
+    <!-- 这是为了移动端web的调试 
+	<script src="../script/debuggap.js" type="text/javascript"></script>-->
 
 	<script type="text/javascript">
 		var userId;//发送的人，即自己
@@ -164,6 +179,8 @@
         window.onload = function (){
             var windowWidth = document.body.clientWidth; //window 宽度;
     		var wrap = document.getElementById('wrap');
+    		//将wrap的width固定成数值，为了在手机上不突然变大
+    		wrap.style.width=windowWidth+"px";
     		
     		//wrap的height设置
     		var headerHeight=$("#header").height();
