将匹配人头像的一整块容器加上点击进入匹配人详情页的方法

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -49,6 +49,9 @@
 					
 				</div>
 				
+				<!-- 2017.12.14  叶夷  装匹配人列表的容器-->
+				<div id="matchUsers" class="matchUsers" onclick="enterMatchUsersPage()">
+				</div>
 				<!--2017.07.04  叶夷   匹配人列表 -->
 				<!-- <div class="mu" id="mutemp1" style="/* left: 145px; */width: 48px;height: 48px;/* top: 80px; */"></div>
     			<div class="mu" id="mutemp2" style="/* left: 193px; */width: 45px;height: 45px;/* top: 83px; */"></div>
@@ -134,10 +137,10 @@
 		<div onclick="cleartimeout()" style="position: absolute;top: 52px;left: 100px;background: #f1f1f1;">
 			选中标签测试停止
 		</div>-->
-		<!-- 进入匹配人详情页按钮-->
+		<!-- 进入匹配人详情页按钮
 		<div onclick="enterMatchUsersPage()" style="position: absolute;top: 52px;left: 100px;background: #f1f1f1;z-index:999;">
 			进入匹配人详情页按钮
-		</div>
+		</div>-->
 		
 	</div> <!--End of <div id="showatloaded" class="showatloaded"> -->
 	
