--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
@@ -31,7 +31,8 @@
 		
 		<!-- 共同选择过的cp -->
 		<div class="selectCp-container" id="selectCp-container">
-			<div style="text-align:center;color:#5e5e5e;height:20px;line-height:20px;font-size:14px;">Ta和我的共同关键词</div>
+			<!-- 2017.12.19  叶夷  “Ta和我的共同关键词”修改成“Ta的关键词”-->
+			<div style="text-align:center;color:#5e5e5e;height:20px;line-height:20px;font-size:14px;">Ta的关键词</div>
 		</div>
 		
 		<div id="dialog_box">
