聊天页的第一句话提示框样式修改

--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
@@ -32,7 +32,7 @@
 		<!-- 共同选择过的cp -->
 		<div class="selectCp-container" id="selectCp-container">
 			<!-- 2017.12.19  叶夷  “Ta和我的共同关键词”修改成“Ta的关键词”-->
-			<div style="text-align:center;color:#5e5e5e;height:20px;line-height:20px;font-size:14px;">Ta的关键词</div>
+			<div style="text-align:center;color:#5e5e5e;height:20px;line-height:20px;font-size:14px;">Ta关注的关键词</div>
 		</div>
 		
 		<div id="dialog_box">
