将网上找的滑动方法去除

--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.html
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.html
@@ -33,9 +33,7 @@
         	<div class="tabBox">
         		<!-- 第一个页面 -->
             	<div class="tabList">
-            		<div class="preloader"> Loading... </div>
-            		<div class="swiper-container"><!--  id="showMatchUsers" -->
-            			<div class="swiper-wrapper" id="showMatchUsers"></div>
+            		<div class="showMatchUsers" id="showMatchUsers">
 						<!--  2017.08.15  叶夷   一个匹配人 -->
 						<!-- <div class="matchUser" id="matchUser">
 							<div class="userimg">
