先取消匹配人详情页tab两边的互相滑动

--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.html
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.html
@@ -222,7 +222,7 @@
                 endX= -star*windowWidth;
             };
             
-            tabBox.addEventListener('touchstart',chstart,false);
+           /*  tabBox.addEventListener('touchstart',chstart,false);
             tabBox.addEventListener('touchmove',chmove,false);
             tabBox.addEventListener('touchend',chend,false);
             //按下
@@ -263,7 +263,7 @@
                      OnTab(tabClick.querySelector('.active').start);
                 }
                 var stars = wrap.querySelector('.active').start;
-            };
+            }; */
     	};
     	
         var init={
