--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -42,7 +42,7 @@
 						<div id="showonlineoffline">
 							<img src="../image/dot-gray.png" onclick="wsConnect()" />
 						</div>
-						<img onclick="updUserImg()" onerror="javascript:this.src='http://42.121.136.225:8888/user-pic2.jpg'"/>
+						<img onclick="updUserImg()" onerror="javascript:this.src='https://42.121.136.225:8888/user-pic2.jpg'"/>
 						<div id="username" onclick="alterNickname()"></div>
 					
 					</div>
@@ -173,7 +173,7 @@
 	<script type="text/javascript" src="topics_page_web.js"></script>
 	<script type="text/javascript" src="../script/popup.js"></script>
 	<script type="text/javascript" src="../script/popcontext.js"></script>
-	<script type="text/javascript" src="http://xunta.so:3000/javascripts/websocket.io.js"></script>
+	<script type="text/javascript" src="https://xunta.so:3000/javascripts/websocket.io.js"></script>
 	<!-- 这是为了移动端web的调试 
 	<script src="../script/debuggap.js" type="text/javascript"></script>-->
 	
