--- a/xunta-web/src/main/webapp/client_code/index.html
+++ b/xunta-web/src/main/webapp/client_code/index.html
@@ -297,7 +297,7 @@
                 	console.log("微信JS-SDK连接成功");
 	        		
 	                //var link = "http://www.xunta.so/wxShareLinksLogin";
-	                var imgUrl = getLacalUrl()+"/../image/xun.jpg";
+	                var imgUrl = getLacalUrl()+"https://www.xunta.so/xunta-web/client_code/image/xun.jpg";
 	                var protocol = window.location.protocol;
 	                var host = window.location.host;
 	                //分享朋友圈
