--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.html
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.html
@@ -6,11 +6,11 @@
 		<meta name="apple-mobile-web-app-capable" content="yes"/>
 		<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
 		<title>聊天页</title>
-		<link rel="stylesheet" type="text/css" href="matchUsers_page.css"/>
-		<link rel="stylesheet" type="text/css" href="matchUsers_page_web.css"/>
-		<link rel="stylesheet" type="text/css" href="dialoglist_page.css"/>
-		<link rel="stylesheet" type="text/css" href="dialoglist_page_web.css"/>
-        <link rel="prefetch" href="../image/acclaim-50x173.png" />
+		<link rel="stylesheet" type="text/css" href="https://www.xunta.so/xunta-web/client_code/matchUsers_page/matchUsers_page.css"/>
+		<link rel="stylesheet" type="text/css" href="https://www.xunta.so/xunta-web/client_code/matchUsers_page/matchUsers_page_web.css"/>
+		<link rel="stylesheet" type="text/css" href="https://www.xunta.so/xunta-web/client_code/matchUsers_page/dialoglist_page.css"/>
+		<link rel="stylesheet" type="text/css" href="https://www.xunta.so/xunta-web/client_code/matchUsers_page/dialoglist_page_web.css"/>
+        <link rel="prefetch" href="https://www.xunta.so/xunta-web/client_code/image/acclaim-50x173.png" />
         <link rel="prefetch" id="prefetch_adminimage" href="" />
 		<link rel="prefetch" id="prefetch_userimage" href="" />
 
@@ -18,7 +18,7 @@
 	<!--下面的为元素库,与代码直接相关,不要作任何变动,运行时会hide掉-->			
 		
     <body>
-    	<div id="goback" onclick="backBtn()"><img src="../image/goback5.png" /></div>
+    	<div id="goback" onclick="backBtn()"><img src="https://www.xunta.so/xunta-web/client_code/image/goback5.png" /></div>
 		<div class="wrap" id="wrap">
     		<ul class="tabClick">
         		<li class="active">匹配</li>
@@ -105,14 +105,14 @@
     		</div>
 		</div>
 	</body>
-	<script type="text/javascript" src="../script/jquery-1.11.3.min.js"></script>
-	<script type="text/javascript" src="../script/common-xunta.js"></script>
-    <script type="text/javascript" src="../script/common-xunta_web.js"></script>
-    <script type="text/javascript" src="matchUsers_page_common_web.js"></script>
-    <script type="text/javascript" src="matchUsers_page_common.js"></script>
+	<script type="text/javascript" src="https://www.xunta.so/xunta-web/client_code/script/jquery-1.11.3.min.js"></script>
+	<script type="text/javascript" src="https://www.xunta.so/xunta-web/client_code/script/common-xunta.js"></script>
+    <script type="text/javascript" src="https://www.xunta.so/xunta-web/client_code/script/common-xunta_web.js"></script>
+    <script type="text/javascript" src="https://www.xunta.so/xunta-web/client_code/matchUsers_page/matchUsers_page_common_web.js"></script>
+    <script type="text/javascript" src="https://www.xunta.so/xunta-web/client_code/matchUsers_page/matchUsers_page_common.js"></script>
     <!-- 这是聊天列表的js信息 -->
-    <script type="text/javascript" src="dialoglist_page_common_web.js"></script>
-    <script type="text/javascript" src="dialoglist_page_common.js"></script>
+    <script type="text/javascript" src="https://www.xunta.so/xunta-web/client_code/matchUsers_page/dialoglist_page_common_web.js"></script>
+    <script type="text/javascript" src="https://www.xunta.so/xunta-web/client_code/matchUsers_page/dialoglist_page_common.js"></script>
     <!-- 下拉刷新控件 -->
     <!-- <script src="../script/idangerous.swiper.min.js"></script>  -->
     <!-- 这是为了移动端web的调试 
@@ -205,7 +205,7 @@
                   
                   //2018.01.09  叶夷  将第二个页面的背景图片更改
                   if(i==1){
-                	  tabList[i].style.backgroundImage="url('../image/dialoglist-background1.jpg')";
+                	  tabList[i].style.backgroundImage="url('https://www.xunta.so/xunta-web/client_code/image/dialoglist-background1.jpg')";
                 	  tabList[i].style.backgroundRepeat="no-repeat";
                 	  tabList[i].style.backgroundSize="200%";
                   }
