--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -6,12 +6,12 @@
 		<meta name="apple-mobile-web-app-capable" content="yes"/>
 		<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
 		<title>话题列表页</title>
-		<link rel="stylesheet" type="text/css" href="topics_page.css"/>
-		<link rel="stylesheet" type="text/css" href="topics_page_web.css"/>
-		<link rel="stylesheet" type="text/css" href="../css/common_web.css"/>
-		<link rel="stylesheet" type="text/css" href="alter_userimage.css"/>
-		<link rel="stylesheet" type="text/css" href="../css/popup.css"/>
-        <link rel="stylesheet" type="text/css" href="../css/popcontext.css"/>
+		<link rel="stylesheet" type="text/css" href="https://www.xunta.so/xunta-web/client_code/main_page/topics_page.css"/>
+		<link rel="stylesheet" type="text/css" href="https://www.xunta.so/xunta-web/client_code/main_page/topics_page_web.css"/>
+		<link rel="stylesheet" type="text/css" href="https://www.xunta.so/xunta-web/client_code/css/common_web.css"/>
+		<link rel="stylesheet" type="text/css" href="https://www.xunta.so/xunta-web/client_code/main_page/alter_userimage.css"/>
+		<link rel="stylesheet" type="text/css" href="https://www.xunta.so/xunta-web/client_code/css/popup.css"/>
+        <link rel="stylesheet" type="text/css" href="https://www.xunta.so/xunta-web/client_code/css/popcontext.css"/>
 
 		<!--让输入框的提示字颜色变淡-->
 		<style>
@@ -40,7 +40,7 @@
 					<div id="userimg">
 						<!-- 信号 -->
 						<div id="showonlineoffline">
-							<img src="../image/dot-gray.png" onclick="wsConnect()" />
+							<img src="https://www.xunta.so/xunta-web/client_code/image/dot-gray.png" onclick="wsConnect()" />
 						</div>
 						<img onclick="updUserImg()" onerror="javascript:this.src='https://42.121.136.225:8888/user-pic2.jpg'"/>
 						<div id="username" onclick="alterNickname()"></div>
@@ -126,7 +126,7 @@
 		
 		<!-- "进入聊天列表按钮"用fixed后,不论放在哪里,都只看屏幕的长宽.-->
 		<div class="enterdialogList" id="enterdialogList" onclick="enterMatchUsersPage()">
-			<img src="../image/new-msg-3.png" />
+			<img src="https://www.xunta.so/xunta-web/client_code/image/new-msg-3.png" />
 		</div>
 
 		<!-- 选中标签并发websocket测试按钮 -->
@@ -164,15 +164,15 @@
         </table>
     </div>
 </body>
-	<script type="text/javascript" src="../script/jquery-1.11.3.min.js"></script>
-	<script type="text/javascript" src="../script/jquery.nicescroll.min.js"></script>
-	<script type="text/javascript" src="../script/common-xunta.js"></script>
-	<script type="text/javascript" src="../script/common-xunta_web.js"></script>
-	<script type="text/javascript" src="../script/popup.js"></script>
-	<script type="text/javascript" src="topics_page.js"></script>
-	<script type="text/javascript" src="topics_page_web.js"></script>
-	<script type="text/javascript" src="../script/popup.js"></script>
-	<script type="text/javascript" src="../script/popcontext.js"></script>
+	<script type="text/javascript" src="https://www.xunta.so/xunta-web/client_code/script/jquery-1.11.3.min.js"></script>
+	<script type="text/javascript" src="https://www.xunta.so/xunta-web/client_code/script/jquery.nicescroll.min.js"></script>
+	<script type="text/javascript" src="https://www.xunta.so/xunta-web/client_code/script/common-xunta.js"></script>
+	<script type="text/javascript" src="https://www.xunta.so/xunta-web/client_code/script/common-xunta_web.js"></script>
+	<script type="text/javascript" src="https://www.xunta.so/xunta-web/client_code/script/popup.js"></script>
+	<script type="text/javascript" src="https://www.xunta.so/xunta-web/client_code/main_page/topics_page.js"></script>
+	<script type="text/javascript" src="https://www.xunta.so/xunta-web/client_code/main_page/topics_page_web.js"></script>
+	<script type="text/javascript" src="https://www.xunta.so/xunta-web/client_code/script/popup.js"></script>
+	<script type="text/javascript" src="https://www.xunta.so/xunta-web/client_code/script/popcontext.js"></script>
 	<script type="text/javascript" src="https://xunta.so:3000/javascripts/websocket.io.js"></script>
 	<!-- 这是为了移动端web的调试 
 	<script src="../script/debuggap.js" type="text/javascript"></script>-->
