将公司简介信息放在网站上

--- a/xunta-web/src/main/webapp/client_code/index.html
+++ b/xunta-web/src/main/webapp/client_code/index.html
@@ -90,7 +90,10 @@
 		</div>
 		
 		
-		
+		<div class="footer" style="position: absolute;top: 97%;color:#999;font-size: 12px;text-align: center;width: 100%;">
+			<a style="margin-right: 10px;text-decoration: underline;cursor: pointer;" onclick="enterProfilePage()">关于我们</a>
+			沪ICP备13012815号-1
+		</div>
 		
 	</body>
 	<script type="text/javascript" src="script/jquery-1.11.3.min.js"></script>
