将语擎公司名称上的链接取消

--- a/xunta-web/src/main/webapp/client_code/profile_page/profile_page.html
+++ b/xunta-web/src/main/webapp/client_code/profile_page/profile_page.html
@@ -16,7 +16,7 @@
      		 <tbody>
       			<tr>
         			<td height="35" colspan="2" align="left" valign="top" bgcolor="#FFFF99"><p>&nbsp;</p>
-        			<p align="center"><a href="http://www.aigine.com/" class="STYLE35">上海语擎信息科技有限公司</a></p>
+        			<p align="center">上海语擎信息科技有限公司</p>
           			<p align="center">	
           				<a href="http://www.xunta.so" class="STYLE35">XunTa.so | 寻TA<span class="STYLE31"> 点</span>搜</a>
           			</p>
