--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -6,12 +6,12 @@
 		<meta name="apple-mobile-web-app-capable" content="yes"/>
 		<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
 		<title>话题列表页</title>
-		<link rel="stylesheet" type="text/css" href="topics_page.css"/>
+		<!-- <link rel="stylesheet" type="text/css" href="topics_page.css"/>
 		<link rel="stylesheet" type="text/css" href="topics_page_web.css"/>
 		<link rel="stylesheet" type="text/css" href="../css/common_web.css"/>
 		<link rel="stylesheet" type="text/css" href="alter_userimage.css"/>
 		<link rel="stylesheet" type="text/css" href="../css/popup.css"/>
-        <link rel="stylesheet" type="text/css" href="../css/popcontext.css"/>
+        <link rel="stylesheet" type="text/css" href="../css/popcontext.css"/> -->
 
 		<!--让输入框的提示字颜色变淡-->
 		<style>
@@ -164,7 +164,7 @@
         </table>
     </div>
 </body>
-	<script type="text/javascript" src="../script/jquery-1.11.3.min.js"></script>
+	<!-- <script type="text/javascript" src="../script/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="../script/jquery.nicescroll.min.js"></script>
 	<script type="text/javascript" src="../script/common-xunta.js"></script>
 	<script type="text/javascript" src="../script/common-xunta_web.js"></script>
@@ -173,11 +173,55 @@
 	<script type="text/javascript" src="topics_page_web.js"></script>
 	<script type="text/javascript" src="../script/popup.js"></script>
 	<script type="text/javascript" src="../script/popcontext.js"></script>
-	<script type="text/javascript" src="http://xunta.so:3000/javascripts/websocket.io.js"></script>
+	<script type="text/javascript" src="http://xunta.so:3000/javascripts/websocket.io.js"></script> -->
 	<!-- 这是为了移动端web的调试 
 	<script src="../script/debuggap.js" type="text/javascript"></script>-->
 	
 	<script type="text/javascript">
+		//2018.02.07 叶夷     静态资源的路径动态的创建
+		var preUrl=window.location.protocol+"//"+document.domain;//获得静态资源路径的协议+域名
+		//将需要的css文件变成js代码生成
+		/* <link rel="stylesheet" type="text/css" href="topics_page.css"/>
+		<link rel="stylesheet" type="text/css" href="topics_page_web.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/common_web.css"/>
+		<link rel="stylesheet" type="text/css" href="alter_userimage.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/popup.css"/>
+        <link rel="stylesheet" type="text/css" href="../css/popcontext.css"/> */
+		loadCss(preUrl+"/xunta-web/client_code/main_page/topics_page.css");
+   		loadCss(preUrl+"/xunta-web/client_code/main_page/topics_page_web.css");
+    	loadCss(preUrl+"/xunta-web/client_code/css/common_web.css");
+    	loadCss(preUrl+"/xunta-web/client_code/main_page/alter_userimage.css");
+    	loadCss(preUrl+"/xunta-web/client_code/css/popup.css");
+    	loadCss(preUrl+"/xunta-web/client_code/css/popcontext.css");
+    	//将需要的js文件变成js代码生成
+		loadJs(preUrl+"/xunta-web/client_code/script/jquery-1.11.3.min.js");
+		loadJs(preUrl+"/xunta-web/client_code/script/jquery.nicescroll.min.js");
+		loadJs(preUrl+"/xunta-web/client_code/script/common-xunta.js");
+		loadJs(preUrl+"/xunta-web/client_code/script/common-xunta_web.js");
+		loadJs(preUrl+"/xunta-web/client_code/script/popup.js");
+		loadJs(preUrl+"/xunta-web/client_code/main_page/topics_page.js");
+		loadJs(preUrl+"/xunta-web/client_code/main_page/topics_page_web.js");
+		loadJs(preUrl+"/xunta-web/client_code/script/popcontext.js");
+	
+		//2018.02.07  叶夷    动态加载js和 css文件的方法
+		function loadJs(src) {
+	    	var script = document.createElement('script');
+	    	script.type="text/javascript";
+	   		script.language = 'javascript';
+	    	script.src= src;
+	    	document.getElementsByTagName('head')[0].appendChild(script);
+		}
+
+		function loadCss(url) {
+	   		var link = document.createElement('link');
+	    	link.type="text/css";
+	    	link.rel = "stylesheet";
+	    	link.href = url;
+	    	link.media = 'screen';
+	    	document.getElementsByTagName('head')[0].appendChild(link);
+		}
+	
+		
 		var userId;
 		//var unionid;//第三方原生ID
 		var userName;
