--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.html
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.html
@@ -119,6 +119,45 @@
 	<script src="../script/debuggap.js" type="text/javascript"></script>-->
 
 	<script type="text/javascript">
+		//2018.02.07 叶夷     静态资源的路径动态的创建
+		var preUrl=window.location.protocol+"//"+document.domain;//获得静态资源路径的协议+域名
+		//将需要的css文件变成js代码生成
+		/* <link rel="stylesheet" type="text/css" href="matchUsers_page.css"/>
+		<link rel="stylesheet" type="text/css" href="matchUsers_page_web.css"/>
+		<link rel="stylesheet" type="text/css" href="dialoglist_page.css"/>
+		<link rel="stylesheet" type="text/css" href="dialoglist_page_web.css"/> */
+		loadCss(preUrl+"/xunta-web/client_code/matchUsers_page/matchUsers_page.css");
+		loadCss(preUrl+"/xunta-web/client_code/matchUsers_page/matchUsers_page_web.css");
+		loadCss(preUrl+"/xunta-web/client_code/matchUsers_page/dialoglist_page.css");
+		loadCss(preUrl+"/xunta-web/client_code/matchUsers_page/dialoglist_page_web.css");
+		//将需要的js文件变成js代码生成
+		loadJs(preUrl+"/xunta-web/client_code/script/jquery-1.11.3.min.js");
+		loadJs(preUrl+"/xunta-web/client_code/script/common-xunta.js");
+		loadJs(preUrl+"/xunta-web/client_code/script/common-xunta_web.js");
+		loadJs(preUrl+"/xunta-web/client_code/matchUsers_page/matchUsers_page.js");
+		loadJs(preUrl+"/xunta-web/client_code/matchUsers_page/matchUsers_page_web.js");
+		loadJs(preUrl+"/xunta-web/client_code/matchUsers_page/dialoglist_page_common_web.js");
+		loadJs(preUrl+"/xunta-web/client_code/matchUsers_page/dialoglist_page_common.js");
+
+		//2018.02.07  叶夷    动态加载js和 css文件的方法
+		function loadJs(src) {
+			var script = document.createElement('script');
+			script.type="text/javascript";
+			script.language = 'javascript';
+			script.src= src;
+			document.getElementsByTagName('head')[0].appendChild(script);
+		}
+
+		function loadCss(url) {
+			var link = document.createElement('link');
+			link.type="text/css";
+			link.rel = "stylesheet";
+			link.href = url;
+			link.media = 'screen';
+			document.getElementsByTagName('head')[0].appendChild(link);
+		}
+	
+	
 		var userId;//发送的人，即自己
 		var userName;	//直接上屏用得着.
         var userImage;	//直接上屏时用得着.
