--- a/xunta-web/src/main/webapp/client_code/profile_page/profile_page.html
+++ b/xunta-web/src/main/webapp/client_code/profile_page/profile_page.html
@@ -4,8 +4,37 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
 		<title></title>
-		<link rel="stylesheet" type="text/css" href="profile_page_web.css"/>
         <meta property="qc:admins" content="650003246763061666375" />
+        
+        <style>
+        	body {
+				position:fixed;
+				margin: 0;
+				padding: 0;
+				width: 100%;
+				height:100%;
+				background-color: #ffffff;
+				cursor:auto;
+				overflow-y:hidden;
+				overflow-x:hidden;
+			}
+
+			#header {
+				float:left;
+				width:100%; 
+				height: 50px; 
+				background-color:#3e4b49;
+				border-bottom:1px solid #d0d0d0; z-index:12;
+				position:relative;
+			}
+	
+			#header img{
+				position:absolute;
+			}
+
+			#goback{position:relative;height:50px;font-size:22px;float:left;z-index:15}
+			#goback img{height:16px; width:22px; margin-top:16px;margin-left:17px;margin-right:10px;}
+        </style>
 	</head>
 	<body>
 		<div id="header">
