--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
@@ -6,12 +6,12 @@
 		<meta name="apple-mobile-web-app-capable" content="yes"/>
 		<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
 		<title>聊天页</title>
-		<link rel="stylesheet" type="text/css" href="dialog_page.css"/>
+		<!-- <link rel="stylesheet" type="text/css" href="dialog_page.css"/>
 		<link rel="stylesheet" type="text/css" href="dialog_page_web.css"/>
 		<link rel="stylesheet" type="text/css" href="inputframe.css"/>
         <link rel="stylesheet" type="text/css" href="../css/popup.css"/>
         <link rel="stylesheet" type="text/css" href="../css/popcontext.css"/>
-        <link rel="stylesheet" type="text/css" href="../css/common_web.css"/>
+        <link rel="stylesheet" type="text/css" href="../css/common_web.css"/> -->
         <link rel="prefetch" href="../image/acclaim-50x173.png" />
         <link rel="prefetch" id="prefetch_adminimage" href="" />
 		<link rel="prefetch" id="prefetch_userimage" href="" />
@@ -77,13 +77,13 @@
 		
 		
 	</body>
-	<script type="text/javascript" src="../script/jquery-1.11.3.min.js"></script>
+	<!-- <script type="text/javascript" src="../script/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="dialog_page_common.js"></script>
 	<script type="text/javascript" src="dialog_page_common_web.js"></script>
     <script type="text/javascript" src="../script/common-xunta.js"></script>
     <script type="text/javascript" src="../script/common-xunta_web.js"></script>
     <script type="text/javascript" src="../script/popup.js"></script>
-	<script type="text/javascript" src="../script/popcontext.js"></script>
+	<script type="text/javascript" src="../script/popcontext.js"></script> -->
 	<!-- 这是为了移动端web的调试 
 	<script src="../script/debuggap.js" type="text/javascript"></script>-->
 
@@ -105,8 +105,8 @@
 		loadCss(preUrl+"/xunta-web/client_code/css/popcontext.css");
 		//将需要的js文件变成js代码生成
 		loadJs(preUrl+"/xunta-web/client_code/script/jquery-1.11.3.min.js");
-		loadJs(preUrl+"/xunta-web/client_code/dialog_page/dialog_page.js");
-		loadJs(preUrl+"/xunta-web/client_code/dialog_page/dialog_page_web.js");
+		loadJs(preUrl+"/xunta-web/client_code/dialog_page/dialog_page_common.js");
+		loadJs(preUrl+"/xunta-web/client_code/dialog_page/dialog_page_common_web.js");
 		loadJs(preUrl+"/xunta-web/client_code/script/common-xunta.js");
 		loadJs(preUrl+"/xunta-web/client_code/script/common-xunta_web.js");
 		loadJs(preUrl+"/xunta-web/client_code/script/popup.js");
