--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -39,7 +39,7 @@
 				<div id="userinfo">
 					<div id="userimg">
 						<!-- 信号 -->
-						<div id="showonlineoffline">
+						<div id="showonlineoffline" style="display:none;">
 							<img src="../image/dot-gray.png" onclick="wsConnect()" />
 						</div>
 						<img onclick="updUserImg()" onerror="javascript:this.src='http://42.121.136.225:8888/user-pic2.jpg'"/>
@@ -114,7 +114,7 @@
 		
 				<div style="width:100%;height:23%;"></div>
 				<!-- start: 叶夷  2017.06.15  添加一个按钮，点击后通过已定义的接口向后台请求一组标签，后台返回后将标签显示出来。点击后继续请求下一页。-->
-				<div class="getmoretopics cursor" id="request_cp" onclick="requestCP(userId,requestCPNum,(requestCPNum*(currentRequestedCPPage++)))">
+				<div class="getmoretopics cursor" id="request_cp" onclick="requestCP(userId,requestCPNum,(requestCPNum*(currentRequestedCPPage++)))" style="display:none;">
 					<div>更多</div>
 				</div>
 				
@@ -125,7 +125,7 @@
 		</div>
 		
 		<!-- "进入聊天列表按钮"用fixed后,不论放在哪里,都只看屏幕的长宽.-->
-		<div class="enterdialogList" id="enterdialogList" onclick="enterMatchUsersPage()">
+		<div class="enterdialogList" id="enterdialogList" onclick="enterMatchUsersPage()" style="display:none;">
 			<img src="../image/new-msg-3.png" />
 		</div>
 
@@ -145,7 +145,7 @@
 	</div> <!--End of <div id="showatloaded" class="showatloaded"> -->
 	
 	<!-- 2017.11.15 叶夷 将修改头像方法模块加入 -->
-	<div class="ImageBox" style="left: 48px;top: 48px;" id="ImageBox">
+	<div class="ImageBox" style="left: 48px;top: 48px;display:none;" id="ImageBox">
         <table border="0" cellpadding="0" cellspacing="0">
             <tr>
                 <td class="box"><h3 class="tit"><a class="cls" href="javascript:;" onclick="closeImageBox()" title="关闭">关闭</a></h3>
@@ -186,7 +186,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/common_web.css"/>
 		<link rel="stylesheet" type="text/css" href="alter_userimage.css"/>
 		<link rel="stylesheet" type="text/css" href="../css/popup.css"/>
-        <link rel="stylesheet" type="text/css" href="../css/popcontext.css"/> */
+        <link rel="stylesheet" type="text/css" href="../css/popcontext.css"/>  */
 		loadCss(preUrl+"/xunta-web/client_code/main_page/topics_page.css");
    		loadCss(preUrl+"/xunta-web/client_code/main_page/topics_page_web.css");
     	loadCss(preUrl+"/xunta-web/client_code/css/common_web.css");
@@ -195,13 +195,14 @@
     	loadCss(preUrl+"/xunta-web/client_code/css/popcontext.css");
     	//将需要的js文件变成js代码生成
 		loadJs(preUrl+"/xunta-web/client_code/script/jquery-1.11.3.min.js");
-		loadJs(preUrl+"/xunta-web/client_code/script/jquery.nicescroll.min.js");
+		//loadJs(preUrl+"/xunta-web/client_code/script/jquery.nicescroll.min.js");
 		loadJs(preUrl+"/xunta-web/client_code/script/common-xunta.js");
 		loadJs(preUrl+"/xunta-web/client_code/script/common-xunta_web.js");
 		loadJs(preUrl+"/xunta-web/client_code/script/popup.js");
 		loadJs(preUrl+"/xunta-web/client_code/main_page/topics_page.js");
 		loadJs(preUrl+"/xunta-web/client_code/main_page/topics_page_web.js");
 		loadJs(preUrl+"/xunta-web/client_code/script/popcontext.js");
+		loadJs(window.location.protocol+"//xunta.so:3000/javascripts/websocket.io.js");
 	
 		//2018.02.07  叶夷    动态加载js和 css文件的方法
 		function loadJs(src) {
@@ -242,6 +243,11 @@
 		var firstRequestMyCp=true;//2017.11.13  叶夷      判断是否是第一次请求我的标签
 
 		function start(pageParamsStr) {//web:在openWin时通过ready后回调,再跨页执行方式来启动的第一个方法.
+			//2018.02.07 判断是否引入jquery文件
+			if(typeof jQuery == 'undefined'){
+			    window.alert("没有jquery");
+			}
+			
 			//1。11 新增，   显示Log日志后点击return事件返回到话题列表页时是没有参数的，data为''，所以下面加个判断条件，为''就结束该方法  FANG
 			retrievePageParams(pageParamsStr); 
 			prepareTopicsPage();
