改进关于我们页样式

--- a/xunta-web/src/main/webapp/client_code/profile_page/profile_page.html
+++ b/xunta-web/src/main/webapp/client_code/profile_page/profile_page.html
@@ -24,22 +24,8 @@
         			</td>
       			</tr> -->
       			<tr>
-        			<td colspan="2" align="left" valign="top" bgcolor="#C6DBC9"><span class="STYLE33"><strong>语擎公司做什么?</strong></span></td>
+					<img src="../image/AboutUs.jpg" style="width:100%"/>
       			</tr>
-      			<tr>
-        			<td colspan="2" align="left" valign="top" bgcolor="#F0F0F0">
-        			<p>上海语擎信息科技有限公司致力于社交大数据的深度学习算法. 我们开发的XunTa(寻Ta)可按照用户设置的任意兴趣组合将最适合彼此互动的人匹配在一起. 注意是任何兴趣组合哦! 从此你的关系触角可按照你自己设定的方向任意延伸, 所有人都被你"点兵点将".</p>
-        			<img src="../image/welcome2.png" style="width:100%;height:50%;"/>
-        			</td>
-      			</tr>
-      			<tr>
-      				<!-- <td width="187" height="134" align="left" valign="top" bgcolor="#F0F0F0"> -->
-        			<td align="left" valign="top" bgcolor="#F0F0F0" style="font-size:13px;">
-        				<p>地址：上海市闵行区浦江镇陈行公路2388号-2号2层</p>
-        				<p>联系电话：15770541592</p>
-        				<p>邮箱：2712178485@qq.com</p>
-        			</td>
-        		</tr>
     		</tbody>
     	   </table>
 		</div>
@@ -53,10 +39,10 @@
 		}
 		
 		//计算公司信息内容div的height
-		var headerHeright=$("#header").height();
-		var bodyHeight=$("body").height();
-		var contentHeight=bodyHeight-headerHeright;
-		$("#content").css("height",contentHeight+"px");
+		//var headerHeright=$("#header").height();
+		//var bodyHeight=$("body").height();
+		//var contentHeight=bodyHeight-headerHeright;
+		//$("#content").css("height",contentHeight+"px");
 		
 	</script>
 </html>
