--- a/xunta-web/src/main/webapp/client_code/profile_page/profile_page.html
+++ b/xunta-web/src/main/webapp/client_code/profile_page/profile_page.html
@@ -11,9 +11,8 @@
 		<div id="header">
 			<div id="goback" onclick="backBtn()"><img src="../image/goback6.png" /></div>
 		</div>
-		<div id="content" style="position:absolute;top:50px;overflow-x:hidden;">
-			<table width='100%' border="0" cellpadding="10" cellspacing="5" style="/* margin-top:22px; */ margin-bottom:5px;">
-     		 <tbody>
+		<div id="content" style="position:absolute;width:100%;height:100%;top:50px;overflow-x:hidden;">
+			
       			<!-- <tr>
         			<td height="35" colspan="2" align="left" valign="top" bgcolor="#FFFF99"><p>&nbsp;</p>
         			<p align="center">上海语擎信息科技有限公司</p>
@@ -23,11 +22,9 @@
           			<p align="center">&nbsp;</p>
         			</td>
       			</tr> -->
-      			<tr>
-					<img src="../image/AboutUs.jpg" style="width:100%"/>
-      			</tr>
-    		</tbody>
-    	   </table>
+  
+				<img src="../image/AboutUs.jpg" style="position:absolute;width:100%"/>
+  
 		</div>
 		
 	</body>
