--- a/xunta-web/src/main/webapp/client_code/product_page/product_page.html
+++ b/xunta-web/src/main/webapp/client_code/product_page/product_page.html
@@ -40,37 +40,22 @@
 		<div id="header">
 			<div id="goback" onclick="backBtn()"><img src="../image/goback6.png" /></div>
 		</div>
-		<div id="content" style="position:absolute;top:50px;overflow-x:hidden;">
-			<table width='100%' border="0" cellpadding="10" cellspacing="5" style="/* margin-top:22px; */ margin-bottom:5px;">
-     		 <tbody>
-      			<!-- <tr>
-        			<td height="35" colspan="2" align="left" valign="top" bgcolor="#FFFF99"><p>&nbsp;</p>
-        			<p align="center">上海语擎信息科技有限公司</p>
-          			<p align="center">	
-          				<a href="http://www.xunta.so" class="STYLE35">XunTa.so | 寻TA<span class="STYLE31"> 点</span>搜</a>
-          			</p>
-          			<p align="center">&nbsp;</p>
-        			</td>
-      			</tr> -->
-      			<tr>
-        			<td colspan="2" align="left" valign="top" bgcolor="#C6DBC9"><span class="STYLE33"><strong>语擎公司做什么?</strong></span></td>
-      			</tr>
-      			<tr>
-        			<td colspan="2" align="left" valign="top" bgcolor="#F0F0F0">
-        			<p>上海语擎信息科技有限公司致力于社交大数据的深度学习算法. 我们开发的XunTa(寻Ta)可按照用户设置的任意兴趣组合将最适合彼此互动的人匹配在一起. 注意是任何兴趣组合哦! 从此你的关系触角可按照你自己设定的方向任意延伸, 所有人都被你"点兵点将".</p>
-        			<img src="../image/welcome2.png" style="width:100%;height:50%;"/>
-        			</td>
-      			</tr>
-      			<tr>
-      				<!-- <td width="187" height="134" align="left" valign="top" bgcolor="#F0F0F0"> -->
-        			<td align="left" valign="top" bgcolor="#F0F0F0" style="font-size:13px;">
-        				<p>地址：上海市闵行区浦江镇陈行公路2388号-2号2层</p>
-        				<p>联系电话：15770541592</p>
-        				<p>邮箱：2712178485@qq.com</p>
-        			</td>
-        		</tr>
-    		</tbody>
-    	   </table>
+		<div id="content" style="position: absolute;top: 50px;overflow-x: hidden;height: 811px;width: 100%;">
+			<div style="
+    				background-color: #C6DBC9;
+   	 				height: 40px;
+    				margin: 5px 5px 5px 5px;
+    				width: 100%;
+    				float: left;
+    				line-height: 40px;
+    				text-align: center;
+    				font-weight: bold;
+			">xunta是什么？</div>
+			<img alt="" src="../image/productPageImg1.png" style="width: 100%;margin: 5px 5px 5px 5px;">
+			<img alt="" src="../image/productPageImg2.png" style="width: 100%;margin: 5px 5px 5px 5px;">
+			<img alt="" src="../image/productPageImg3.png" style="width: 100%;margin: 5px 5px 5px 5px;">
+			<img alt="" src="../image/productPageImg4.png" style="width: 100%;margin: 5px 5px 5px 5px;">
+			<img alt="" src="../image/productPageImg5.png" style="width: 100%;margin: 5px 5px 5px 5px;">
 		</div>
 		
 	</body>
@@ -93,7 +78,7 @@
 		}
 	
 		function backBtn(){
-			closeWin('profile_page');
+			closeWin('product_page');
 		}
 		
 		//计算公司信息内容div的height
